[package]
name = "linter"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
clap = {workspace = true}
semver = {workspace = true}
slang_solidity = {path = "../../crates/solidity/outputs/cargo/slang_solidity/"}

[lints]
workspace = true
